Actualizacion de inner join ya funcionales

--- a/web/views/Cuenta/Cuenta.xhtml
+++ b/web/views/Cuenta/Cuenta.xhtml
@@ -44,11 +44,11 @@
                         </p:column>
 
                         <p:column headerText="Cuenta Padre ">
-                            <p:outputLabel value="#{cu.cuentaPadre}"/>
+                            <p:outputLabel value="#{cu.cuentaPadre2}"/>
                         </p:column>
 
                         <p:column headerText="Tipo de Cuenta ">
-                            <p:outputLabel value="#{cu.tipoCuenta}"/>
+                            <p:outputLabel value="#{cu.tipoCuenta2}"/>
                         </p:column>
 
 
