--- a/web/views/Saldos/Saldo.xhtml
+++ b/web/views/Saldos/Saldo.xhtml
@@ -52,7 +52,7 @@
                         </p:column>
 
                         <p:column headerText="Cuenta">
-                            <p:outputLabel value="#{sl.cuenta}"/>
+                            <p:outputLabel value="#{sl.cuenta2}"/>
                         </p:column>
 
                         <p:column headerText="Periodo">
